src/test/ui/where-clauses/where-equality-constraints.stderr
error: equality constraints are not yet supported in `where` clauses
  --> $DIR/where-equality-constraints.rs:1:14
   |
LL | fn f() where u8 = u16 {}
   |              ^^^^^^^^ not supported
   |
   = help: add `#![feature(type_equality_constraints)]` to the crate attributes to enable
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information

error: equality constraints are not yet supported in `where` clauses
  --> $DIR/where-equality-constraints.rs:4:14
   |
LL | fn g() where for<'a> &'static (u8,) = u16, {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not supported
   |
   = help: add `#![feature(type_equality_constraints)]` to the crate attributes to enable
   = note: see issue #20041 <https://github.com/rust-lang/rust/issues/20041> for more information

error[E0308]: mismatched types
  --> $DIR/where-equality-constraints.rs:1:1
   |
LL | fn f() where u8 = u16 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^ expected `u8`, found `u16`
   |
   = note: expected type `u16`
              found type `u8`

error[E0308]: mismatched types
  --> $DIR/where-equality-constraints.rs:4:1
   |
LL | fn g() where for<'a> &'static (u8,) = u16, {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&(u8,)`, found `u16`
   |
   = note:   expected type `u16`
           found reference `&'static (u8,)`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
